add page loading animation

--- a/css/index.css
+++ b/css/index.css
@@ -21,6 +21,19 @@ body {
   overflow: auto !important;
 }
 
+#loading{
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  z-index: 10000;
+}
+#loading-image {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+
 a{
   text-decoration: none;
 }
