調整svg無法顯示的問題

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -40,6 +40,9 @@ a{
 ol, ul{
   padding: unset;
 }
+.overflow-hidden{
+  overflow: hidden;
+}
 /*-- component styles --*/
 .text-custom-primary{
   color: #36F1CD;
