remove slick.js

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -372,7 +372,7 @@ footer{
   .anticipation-list{
     padding: 0;
   }
-  .contact-wrapper .send-btn{
+  .contact-wrapper .btn{
     width: 100%;
   }
 }
