修改svg白邊的問題

--- a/src/styles/animate.css
+++ b/src/styles/animate.css
@@ -93,7 +93,7 @@
   #eyebrows{
     animation: eyeBrows 1.5s infinite alternate;
   }
-  #right-arm-lower{
+  #right-arm-upper{
     animation: rightArmLower 2s infinite alternate;
   }
   #left-arm-upper{
